<resources>
    <string name="app_name">My Programs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_logo">App Logo</string>
    <string name="title_create_user">Create User</string>
    <string name="subtitle_create_user">Enter your details to get started</string>
    <string name="subtitle_sign_in_user">Welcome back to My Programs</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email (Optional)</string>
    <string name="btn_create_local_user">Create Local User</string>
    <string name="btn_create_remote_user">Create Remote User</string>
    <string name="btn_already_have_account">Already have an account? Sign In</string>
    <string name="text_or">OR</string>
    <string name="description_remote_user">Want to synchronize your data across multiple devices? Create a remote account to securely backup your timetables, exams, and tasks in the cloud and access them anywhere, anytime.</string>
    <string name="error_first_name_required">First name is required</string>
    <string name="error_last_name_required">Last name is required</string>
    <string name="error_invalid_email">Please enter a valid email</string>
    <string name="btn_create_account">Create Account</string>
    <string name="hint_second_name">Second Name</string>
    <string name="hint_organization">Organization</string>
    <string name="organization_helper_text">School, Workplace, Company, etc.</string>
    <string name="agree_terms_condition">By continuing, you agree to the</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="already_have_account">Already have Account</string>
    <string name="sign_in">Sign In</string>
    <string name="if_want_sync">Create an account to store your data on a remote server and access it across all your devices. Click for more info.</string>
    <string name="or">OR</string>
    <string name="more_info">More info</string>
    <string name="title_create_remote_user">Create Remote User</string>
    <string name="email">E Mail</string>
    <string name="hint_user_name">User Name</string>
    <string name="password">Password</string>
    <string name="password_helper">At least 6 character</string>
    <string name="sign_up_with_google">SIGN UP WITH GOOGLE</string>
    <string name="title_signin_remote_user">Sign In Remote User</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hint_user_role">Role</string>
    <string name="user_role_helper_text">Student, Teacher, etc.</string>
    <string name="appBarTitle_programTables">Program Tables</string>
    <string name="addProgram">Add Program Table</string>
    <string name="more">More</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="hint_title">Title</string>
    <string name="cance">Cancel</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="youShoulTypeATitle">You should type a title.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="enter_a_title_for_your_program_table">Enter a title for your program table</string>
    <string name="create_new_program_table">Create New Program</string>
    <string name="enter_a_description_for_your_program_table">Enter description for your program table.</string>
    <string name="hint_description">Description</string>
    <string name="color">Color</string>
    <string name="failed_get_to_user_information">Failed to get user information.</string>
    <string name="failed_to_get_user_information">Failed to get user information.</string>
    <string name="program_table_added_successfully">Program table added successfully.</string>
    <string name="program_tables">Program Tables</string>
    <string name="home">Home</string>
    <string name="notes">Notes</string>
    <string name="profile">Profile</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="purple">Purple</string>
    <string name="brown">Brown</string>
    <string name="cyan">Cyan</string>
    <string name="orange">Orange</string>
    <string name="program_table">Program Table</string>
    <string name="program_table_deleted_successfully">Program table deleted successfully.</string>
    <string name="program_table_updated_successfully">Program updated successfully.</string>
    <string name="appBarTitle_courses">Courses</string>
    <string name="add">Add</string>
    <string name="create_new_course">Create New Course</string>
    <string name="course">Course</string>
    <string name="people">People</string>
    <string name="hint_people">People</string>
    <string name="you_could_type_teacher_or_assistant">You could type teacher or assistant etc.</string>
    <string name="for_multiple_people_separate_with_commas">For multiple people, separate with commas</string>
    <string name="course_added_successfully">Course added successfully</string>
    <string name="appBarTitle_courseDetails">Course Details</string>
    <string name="tasks">Tasks</string>
    <string name="description">Description</string>
    <string name="files">Files</string>
    <string name="modelColor_1">Red</string>
    <string name="modelColor_2">Blue</string>
    <string name="modelColor_3">Green</string>
    <string name="modelColor_4">Yellow</string>
    <string name="modelColor_5">Orange</string>
    <string name="modelColor_6">Purple</string>
    <string name="modelColor_7">Brown</string>
    <string name="modelColor_8">Cyan</string>
    <string name="create_new_schedule">Create New Schedule</string>
    <string name="task">Task</string>
    <string name="date">Date</string>
    <string name="Repeat">Repeat</string>
    <string name="hint_date">Date</string>
    <string name="repeat">Repeat</string>
    <string name="time">Time</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="hint_start">Start</string>
    <string name="hint_end">End</string>
    <string name="reminder">Reminder</string>
    <string name="hint_reminder">Reminder</string>
    <string name="reminderInfo">You will receive notification.</string>
    <string name="place">Place</string>
    <string name="hint_place">Place</string>
    <string name="schedule_added_successfully">Schedule added successfully.</string>
    <string name="schedule_updated_successfully">Schedule updated successfully.</string>
    <string name="course_deleted_successfully">Course deleted successfully.</string>
    <string name="select_date">Select Date</string>
    <string name="select_program_table">Select a program table</string>
    <string name="add_note">Add Note</string>
    <string name="add_file">Add File</string>
    <string name="add_link">Add Link</string>
    <string name="file">File</string>
    <string name="file_type">File Type</string>
    <string name="file_size">Size</string>
    <string name="add_new_note">Add New Note</string>
    <string name="header">Header</string>
    <string name="edit_note">Edit Note</string>
    <string name="add_new_link">Add New Link</string>
    <string name="link">Link</string>
    <string name="hint_url">URL</string>
    <string name="edit_link">Edit Link</string>
    <string name="title_save_your_data_to_the_cloud">Save Your Data to the Cloud</string>
    <string name="subtitle_why_create_account">Why create an account?</string>
    <string name="account_benefits_description">By creating a free account, you can:\n• Securely back up your schedules and files.\n• Access your data from any device, anytime.\n• Restore your data easily if you change phones.</string>
    <string name="title_create_your_account">Create Your Account</string>
    <string name="account">Account</string>
    <string name="role">Role</string>
    <string name="full_name">Full Name</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="academic_level">Academic Level</string>
    <string name="organization">Organization</string>
    <string name="name">Name</string>
    <string name="settings">Settings</string>
    <string name="export_data">Export Data</string>
    <string name="import_data">Import Data</string>
    <string name="contact_support">Contact Support</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="delete_all_data">Delete All Data</string>
    <string name="app_version">App Version: 1.0.0</string>
    <string name="let_s_get_to_know_you">Let\'s Get to Know You!</string>
    <string name="tell_us_a_little_about_yourself_to_personalize_your_experience">Tell us a little about yourself to personalize your experience.</string>
    <string name="what_should_we_call_you">What should we call you?</string>
    <string name="where_do_you_study_school_university">Where do you study? (School/University)</string>
    <string name="your_field_of_study_or_major">Your field of study or major</string>
    <string name="what_are_your_dreams_or_goals">What are your dreams or goals?</string>
    <string name="let_s_start">Let\'s Start!</string>
    <string name="skip_for_now">Skip For Now</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="skip_without_account">Skip Without Account</string>
    <string name="date_range_start">Start Date</string>
    <string name="date_range_end">End Date</string>
    <string name="select_the_date_range_for_this_recurring_task">Select the date range for this recurring task.</string>
    <string name="exam">Exam</string>
    <string name="exam_type">Exam Type</string>
    <string name="target_score">Target Score</string>
    <string name="due_date">Due Date</string>
    <string name="homework">Homework</string>
    <string name="submission_type">Submission Type</string>
    <string name="lesson">Lesson</string>
    <string name="edit_task">Edit Task</string>
    <string name="due_time">Due Time</string>
    <string name="achieved_score">Achieved Score</string>
    <string name="due">Due</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="all_course">All Courses</string>
    <string name="check_all">Check All</string>
    <string name="ok">OK</string>
    <string name="select_program_tables">Select Program Tables</string>
    <string name="select_program_tables_to_show_in_home">Select program tables to show in home</string>
    <string name="and_more">and more</string>
    <string name="select">Select</string>
    <string name="scroll_to_today">Scroll To Today</string>
    <string name="search_in_files">Search in files…</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="chose_file">Chose File</string>
    <string name="file_preview">File preview</string>
    <string name="details">Details</string>
    <string name="courses">Courses</string>
    <string name="activate">Activate</string>
    <string name="set_active">Set Active</string>
    <string name="synchronization">Synchronization</string>
    <string name="about_you">About You</string>
    <string-array name="recurrence_options">
        <item>Does not repeat</item>
        <item>Repeats daily</item>
        <item>Repeats weekly</item>
        <item>Repeats monthly</item>
        <item>Repeats yearly</item>
    </string-array>
</resources>