<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragmentHome"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"
        android:enabled="true"/>

    <item
        android:id="@+id/fragmentCourseList"
        android:icon="@drawable/baseline_menu_book_24"
        android:title="@string/courses"
        android:enabled="true"/>

    <item
        android:id="@+id/fileFragment"
        android:title="@string/files"
        android:icon="@drawable/baseline_note_alt_24"
        android:enabled="true"/>

    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/baseline_person_24"
        android:enabled="true"/>
</menu>